--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -227,7 +227,7 @@
   + 目标文件有三种形式:
     + 可重定位目标文件：包含二进制文件和代码，其形式在编译时和其他可重定位目标文件合并起来，创建一个可执行目标文件
       + 每个.o文件由对应的.c文件生成 
-      + 每个.o文件代码和数据地址 都从**0**开始
+      + 每个.o文件代码和数据地址 都从 **0** 开始
     + 可执行目标文件：
       + 包含的代码和数据可以被直接复制到内存并被执行
       + 代码和数据地址为虚拟地址空间中的地址
@@ -246,7 +246,7 @@
 +  数据链路层：定义数据的基本格式，如何传输，如何标识；如网卡MAC地址。 传输的数据称为帧
 + 网络层：定义IP编址，定义路由功能：如不同设备的数据转发。 传输的数据称为包
 + 传输层：端到端传输数据的基本功能；如 TCP、UDP。 传输的数据称为段
-+ 会话层：控制应用程序之间会话能力;如不同软件数据分发给不同软件。 
++ 会话层：控制应用程序之间会话能力；如不同软件数据分发给不同软件。 
 + 表示层：数据格式标识，基本压缩加密功能。
 + 应用层：各种应用软件，包括 Web 应用。
 
@@ -816,7 +816,8 @@
 
 ##### 2. **介绍一下域名解析系统 DNS**
 
-+ DNS 是一个分布式数据库，提供了主机名和 IP 地址之间相互转换的服务。DNS 可以使用 UDP 或 TCP 进行传输，端口号都为 53。多数情况使用 UDP ，所以域名解析器和域名服务器必须自己处理超时和重传来保证可靠性。使用TCP 情况：
++ DNS(Domain Name Server，域名服务器) 是一个分布式数据库，提供了主机名和 IP 地址之间相互转换的服务。
++ DNS 可以使用 UDP 或 TCP 进行传输，端口号都为 53。多数情况使用 UDP 。使用TCP 情况：
   + 如果返回的响应超过的 512 字节（UDP 最大只支持 512 字节的数据）。
   + 区域传送（区域传送是主域名服务器向辅助域名服务器传送变化的那部分数据）。
 
@@ -842,7 +843,6 @@
 ##### 4. **为什么域名解析基本上使用 UDP 协议？**
 
 + 因为UDP快! UDP的DNS协议只要一个请求、一个应答就好了。TCP需要三次握手建立连接
-+ 但UDP 最大只支持 512 字节的数据，如果数据超过则使用TCP
 
 ---
 
@@ -1206,7 +1206,7 @@
   - 使用明文进行通信，内容可能会被窃听；
   - 不验证通信方的身份，通信方的身份有可能遭遇伪装；
   - 无法证明报文的完整性，报文有可能遭篡改。
-+ HTTPS 并不是新协议，而是让 HTTP 先和 SSL（Secure Sockets Layer）通信，再由 SSL 和 TCP 通信，也就是说 HTTPS 使用了隧道进行通信。
++ HTTPS 是让 HTTP 先和 SSL（Secure Sockets Layer）通信，再由 SSL 和 TCP 通信，也就是说 HTTPS 使用了隧道进行通信。
 + 通过使用 SSL，HTTPS 具有了加密（防窃听）、认证（防伪装）和完整性保护（防篡改）。
 
 ---
