--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -305,10 +305,6 @@ const int sz = get_size();			// 不是常量表达式
 
 + 该运算符把expression转换成type-id类型的对象。Type-id必须是类的指针、类的引用或者void *；如果type-id是类指针类型，那么expression也必须是一个指针，如果type-id是一个引用，那么expression也必须是一个引用
 
-
-
-
-
 ---
 
 ### 字符串，向量和数组
@@ -332,6 +328,19 @@ const int sz = get_size();			// 不是常量表达式
 
 - sizeof是运算符，并不是函数，结果在编译时得到而非运行中获得，不能用来得到动态分配（运行时分配）存储空间的大小。sizeof参数可以是任何数据的类型或者数据
 - strlen是字符处理的库函数。参数只能是字符指针且结尾是'\0'的字符串。
+
+---
+
+### 函数
+
+##### 1.形参与实参的区别
+
++ 进行函数调用时，将实参的内容复制一份传送给形参。数据传送是单向的。 
++ 形参只有在函数内部有效，在被调用时分配内存单元，在调用结束时， 即刻释放所分配的内存单元。
+
+---
+
+
 
 ---
 
@@ -890,6 +899,270 @@ s2 = s; // 赋值运算符操作
 
 ---
 
+### 动态内存
+
+#####  1.堆和栈的区别
+
+- **申请方式不同**：栈由系统自动分配；堆是自己申请和释放的。
+- **申请大小限制不同：** 
+  - 栈顶和栈底是之前预设好的，栈是向栈底扩展，大小固定，可以通过ulimit -a查看，由ulimit -s修改；
+  - 堆向高地址扩展，是不连续的内存区域，大小可以灵活调整。
+- **申请效率不同**：栈由系统分配，速度快，不会有碎片；堆由程序员分配，速度慢，且会有碎片。
+
+---
+
+##### 2.linux进程的内存分布
+
+从低地址到高地址：
+
+1. 代码段(.text)：由各个函数产生，最终经过编绎和汇编生成二进制机器代码，该部分空间只能读，不可写；
+2. 初始化数据段(.data)：包含程序中需明确地赋初值的变量
+3. 未初始化数据段(. bss:block started by symbol)，在程序执行之前，内核将该段中的数据初始化为0或空指针。
+4. 堆：就是平时所说的动态内存， `malloc/new` 来源于此。其中堆顶的位置可通过函数 `brk` 和 `sbrk`进行动态调整;
+5. 文件映射区域：如动态库、共享内存等映射物理空间的内存，一般是 `mmap` 函数所分配的虚拟地址空间。
+6. 栈：用于维护函数调用的上下文空间，一般为 8 M ，可通过 `ulimit –s` 查看。
+7. 内核虚拟空间：用户代码不可见的内存区域，由内核管理(页表就存放在内核虚拟空间)
+
+<img src="../图片/面经1.png" width="300px" />
+
+---
+
+##### 3.C++的内存分区管理方式
+
+首先说明,在C++中，内存分为5个区：堆、占、自由存储区、全局/静态存储区、常量存储区
+
++ **栈：** 是由编译器在需要时自动分配，不需要时自动清除的变量存储区。通常存放局部变量、函数参数等。
++ **堆：** C++两个动态内存区域之一，使用malloc、free以及他们的变形体来进行分配和回收。
++ **自由存储区：** 是另一个动态存储区域，使用new和delete来予以分配和释放。
++ **全局/静态存储区：** 全局变量和静态变量被分配到同一块内存中
++ **常量存储区：** 这是一块特殊存储区，里边存放常量，不允许修改。
+
+> 在C语言中，全局变量又分为初始化的和未初始化的，C++中没有这一区分。
+
+```c
+//main.cpp
+int   a   =   0;   //全局初始化区
+char   *p1;        //全局未初始化区
+int main(){
+  int   b;                     //栈
+	char   s[]   =   "abc";      // 栈
+	char   *p2;                  //栈
+	char   *p3   =   "123456";   // 123456/0在常量区，p3在栈上。
+	static int c = 0；           // 全局（静态）初始化区
+	p1 =   (char *)malloc(10)
+	p2 =   (char *)malloc(20)    // 分配得来得10和20字节的区域就在堆区。
+	strcpy(p1, "123456");        // 123456/0放在常量区，编译器可能会将它与p3所指向的"123456"优化成一个地方。
+}
+```
+
+> 注意：堆和自由存储区其实不过是同一块区域，
+>
+> new底层实现代码中调用了malloc，new可以看成是malloc智能化的高级版本
+
+---
+
+##### 4.堆和自由存储区是不是同一块区域
+
++ 堆 是c语言和操作系统的术语。堆是操作系统所维护的一块特殊内存，提供了动态分配的功能，程序运行时调用malloc会从中分配，调用free可把内存交换。
+
++ 自由存储区是C++中通过new和delete动态分配和释放对象的抽象概念，通过new申请的内存区域可称为自由存储区。
+
++  C++编译器默认用堆来实现自由存储区，缺省的全局运算符new和delete也许会按照malloc和free的方式来实现，这时由new运算符分配的对象，说它在堆上也对，说它在自由存储区也对。
+
+---
+
+##### 5.堆和栈谁快？
+
++ 栈快
+
++ 操作系统会在底层对栈提供支持，会配专门的寄存器存放栈的地址，栈的入栈出栈操作也十分简单，并且有专门的指令执行，所以栈的效率比较高也比较快。
+
++ 堆的操作是由C/C++函数库提供的，在分配堆内存时需要一定的算法寻找合适大小的内存。并且获取堆的内容需要两次访问，第一次访问指针，第二次根据指针保存的地址访问内存，因此堆比较慢。
+
+---
+
+##### 6.new / delete 与 malloc / free的异同
+
++ 相同点：
+  + 都可用于内存的动态申请和释放
++ 不同点：
+  + new / delete是C++运算符，malloc / free是C/C++语言标准库函数
+  + new自动计算要分配的空间大小`new int[4]`，malloc需要手工计算`malloc(sizeof(int)*4)`
+  + new是类型安全的，在编译时会指出错误，而malloc不是
+  + new/delete是保留字，不需要头文件支持；malloc/free需要头文件库函数支持。
+  + 在构造函数与析构函数角度回答
+
+---
+
+##### 7.new和delete是如何实现的,实现原理是什么？
+
++ new的实现过程：
+  + 先调用 **operator new** 标准库函数，分配内存保存指定类型的一个对象；
+  + 然后调用该类型的构造函数初始化构造对象；
+  + 最后返回指向新分配并构造后的的对象的指针
++ delete的实现过程：
+  + 对指针指向的对象运行对应的析构函数；
+  + 然后调用 **operator delete** 标准库函数释放该对象所用内存
+
+---
+
+##### 8.new 与 malloc 的区别
+
++ malloc和free是标准库函数，支持覆盖；new和delete是运算符，并且支持重载。
++ malloc仅仅分配内存空间，free仅仅回收空间，不具备调用构造函数和析构函数功能，用malloc分配空间存储类的对象存在风险；new和delete除了分配回收功能外，还会调用构造函数和析构函数。
++ malloc和free返回的是void类型指针（必须进行类型转换），new和delete返回的是具体类型指针。
+
+---
+
+##### 9.delete和delete[]区别？
+
++ delete只会调用一次析构函数。
++ delete[]会调用数组中从后往前调用每个元素的析构函数。
+
+---
+
+##### 10. delete[] 怎么知道释放内存的大小的
+
++ 需要在 new [] 一个对象数组时，需要保存数组的维度
++ C++ 的做法是在分配数组空间时多分配了 4 个字节的大小，专门保存数组的大小，在 delete [] 时就可以取出这个保存的数，就知道了需要调用析构函数多少次了。
+
+---
+
+##### 11.既然有了malloc/free，C++中为什么还需要new/delete?
+
++ malloc/free和new/delete都是用来申请内存和回收内存的。 
++ 在对非基本数据类型的对象使用的时候，对象创建的时候还需要执行构造函数，销毁的时候要执行析构函数。malloc/free是库函数，是已经编译的代码，不能把构造函数和析构函数的功能强加给 malloc/free，所以new/delete 是必不可少的。
+
+---
+
+##### 12.被free回收的内存是立即返还给操作系统吗？
+
++ 不是的，被free回收的内存会首先被ptmalloc使用双链表保存起来，当用户下一次申请内存的时候，会尝试从这些内存中寻找合适的返回。
++ 这样就避免了频繁的系统调用，占用过多的系统资源。同时ptmalloc 也会尝试对小块内存进行合并，避免过多的内存碎片。
+
+---
+
+##### 13.有几种类型的new
+
++  **plain new** ：普通的new，常用的new
+
+  +  **plain new** 在空间分配失败的情况下，抛出异常 **std::bad_alloc** 而不是返回NULL，通过判断返回值是否为NULL是徒劳的
+
+  ```c++
+  void* operator new(std::size_t) throw(std::bad_alloc);
+  char *p = new char[10e11];
+  ```
+
++  **nothrow new** : 
+
+  + 在空间分配失败的情况下是不抛出异常，而是返回NULL
+
+  ```c
+  void * operator new(std::size_t,const std::nothrow_t&) throw();
+  char *p = new(nothrow) char[10e11];
+  ```
+
++  **placement new** ：允许在一块已经分配成功的内存上重新构造对象或对象数组。
+
+  + 主要用途是反复使用一块较大的动态分配的内存来构造不同类型的对象或者他们的数组
+  + placement new构造起来的对象数组，要显式的调用他们的析构函数来销毁（析构函数并不释放对象的内存），不要使用delete，因为placement new构造起来的对象或数组大小并不一定等于原来分配的内存大小，使用delete会造成内存泄漏或者之后释放内存时出现运行时错误。
+
+  ```c++
+  char *p = new(nothrow) char[sizeof ADT + 1];
+  if (p == NULL) {
+    	cout << "alloc failed" << endl;
+  }
+  ADT *q = new(p) ADT;  //placement new:不必担心失败，只要p所指对象的的空间足够ADT创建即可
+  //delete q;           //错误!不能在此处调用delete q;
+  q->ADT::~ADT();       //显示调用析构函数
+  delete[] p;
+  ```
+
+---
+
+##### 14.C++中NULL和nullptr区别
+
++ NULL在C++中存在二义性，宏定义为`#define NULL 0`，既是整数，也是一个指针。作为实参传给形参为`void* p`是会报二义性错误。
++ C++ 11为了解决这个问题而提出了 nullptr ，若想使用整数特性，就赋值为0，若想使用指针特性，就赋值为nullptr
++ 优先用nullptr
+
+---
+
+##### 15. allocator作用
+
++ C++中new首先会分配内存，然后自动的完成对象构造
++ allocator将这两部分拆开，可以先分配对象，在需要构造时利用 construt 进行构造
+
+```c++
+allocator<char> str;
+char* base = str.allocate(10), *p = base; //内存分配
+str.construct(p++, 'a');  //对象构造并初始化
+str.construct(p++, 'b');
+cout << base[0] << base[1];
+```
+
+> allocator对应 dealloctor ；construct 对应 destory
+
+---
+
+##### 16.malloc 与 free 的实现原理
+
++ 标准C库提供malloc/free函数分配释放内存，这两个函数底层是由brk、mmap、munmap这些系统调用实现的;
++ malloc申请动态内存：
+  + malloc小于128k的内存使用brk分配内存，将_edata往高地址推；brk分配的内存要等到高地址内存释放以后才能释放
+  + malloc大于128k的内存，使用 mmap分配内存，在堆和栈之间找一块空闲内存分配；mmap分配的内存可以单独释放。free释放利用ummap。
++ malloc是从堆里面申请内存，函数返回的指针是指向堆里面的一块内存。操作系统中有一个记录空闲内存地址的链表。当操作系统收到程序的申请时，就会遍历该链表，然后就寻找第一个空间大于所申请空间的堆结点，然后就将该结点从空闲结点链表中删除，并将该结点的空间分配给程序。
+
+##### 17.malloc 申请的存储空间能用delete释放吗？
+
++ 不能，malloc/free，new和delete 按照要求是需要对应使用的
++ malloc/free不能执行构造函数与析构函数
++ 不过从理论上说使用malloc申请的内存是可以通过delete释放的。而且自己也做过实验都成功了，但不能保证每次C++的运行时都能正常。
+
+---
+
+##### 18.深拷贝和浅拷贝的却别
+
++ 浅拷贝只是拷贝一个指针，没有新开辟一个地址，拷贝的指针和原来的指针指向同一块地址，如果原来的指针所指向的资源释放了，再释放浅拷贝的指针的资源就会出现错误。
++ 深拷贝不仅拷贝值，还开辟出一块新的空间用来存放新的值，即使原先的对象被析构掉，释放内存了也不会影响到深拷贝得到的值。
+  + 在实现拷贝赋值的时候，如果有指针变量的话是需要自己实现深拷贝的。
+
+---
+
+##### 19.什么情况下会调用拷贝构造函数
+
+- 用类的一个实例化对象去初始化另一个对象的时候
+- 函数的参数是类的对象时（非引用传递）
+  - 调用函数时先根据传入的实参产生临时对象，再用拷贝构造去初始化这个临时对象
+- 函数的返回值是函数体内局部对象的类的对象时 ,此时虽然发生（Named return Value优化）NRV优化，但是由于返回方式是值传递，所以会在返回值的地方调用拷贝构造函数（Linux g++不会调用，Windows VS19会）
+  - 产生临时对象，调用拷贝构造函数把返回对象拷贝给临时对象，函数执行完先析构局部变量，再析构临时对象，  依然会调用拷贝构造函数
+
+---
+
+##### 20.什么是对象复用，零拷贝技术，C++中哪里用到了
+
++ 对象复用：
+  + 对象复用其本质是 享元 设计模式。 通过将对象存储到“对象池”中实现对象的重复利用，可以避免多次创建重复对象的开销，节约系统资源。
++ 零拷贝技术：
+  + 避免 CPU 将数据从一块存储拷贝到另外一块存储的技术。可以减少数据拷贝和共享总线操作的次数。
+  + vector的一个成员函数 **emplace_back() **很好地体现了零拷贝技术
+    + 使用 **push_back() **函数需要调用拷贝构造函数和转移构造函数，
+    + 使用 **emplace_back()** 插入的元素原地构造，不需要触发拷贝构造和转移构造，效率更高
+
+---
+
+### 面向对象程序设计
+
+### 模板类
+
+
+
+### 异常
+
+
+
+---
+
 ## 三. STL
 
 ### STL基本介绍
@@ -1404,387 +1677,398 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 ### 1.socket
 
-- **TCP进行socket编程的步骤**
+##### 1.内存中的多字节数据的大小端
 
-  - 服务端和客户端初始化 socket ，得到文件描述符;
-  - 服务端调用 bind ，将绑定在 IP 地址和端口;
-  - 服务端调用 listen ，进行监听;
-  - 服务端调用 accept ，等待客户端连接；
-  - 客户端调用 connect ，向服务器端的地址和端口发起连接请求;
-  - 服务端 accept 返回用于传输的 socket 的文件描述符;
-  - 客户端调用 write 写入数据;服务端调用 read 读取数据;
-  - 客户端断开连接时，会调用 close ，那么服务端 read 读取数据的时候，就会读取到了 EOF ， 待处理完 数据后，
-  - 服务端调用 close ，表示连接关闭。
++  **CP/IP协议规定，网络数据流应采用大端字节序，计算机为小端存储，即低地址高字节。**
 
-- **服务器端会维护哪两个队列？** 
+  + 大端字节序：低地址存高位
+  + 小端字节序：低地址存低位
 
-  - 未完成连接队列(SYN 队列):接收到一个 SYN 建立连接请求，处于 SYN_RCVD 状态; 
-  - 已完成连接队列(Accpet 队列):已完成 TCP 三次握手过程，处于 ESTABLISHED 状态;
-
-- **服务器端进行TCP连接(socket连接)时，内核的工作流程**
-
-  - 当客户端发送的SYN请求报文到达后，插入到SYN 队列，随后给对方发送ACK确认报文
-  - 当接收到客户端的ACK确认报文后，应用程序从Accpet 队列中取出已完成连接的socket
-
-- **socket的各个步骤对应 TCP 握手中的哪些阶段？**
-
-  - 客户端初始化 socket ，调用 connect 后，进入SYS-SENT状态，是第一次握手阶段
-  - 服务器端初始化 socket ，调用 bind 绑定在 IP 地址和端口，调用 listen 进行监听后，进入Listen状态
-  - 服务器端在接收到客户端的 SYN 请求报文后， 调用 accept ，等待客户端连接，并回复ACK确认报文，进入 SYN-RCVD状态
-  - 客户端接收到ACK确认报文后，connect函数返回文件操作符，回复ACK确认报文，进入established状态
-  - 服务器端收到对方的ACK确认报文后，accpet API 函数返回 文件操作符，进入established状态
-
-- **为什么一个socket可以accept多次？**
-
-  - 输入参数 fd 是从 socket， bind， listen 中沿用下来的 socket 句柄值，是在指定的端口处监昕所有的连接请求。
-  - 调用 accept() 是从 socket fd 的请求队列抽取第一个连接信息，创建新的同类型 socket 句柄 fd 来进行后续操作。
-  - 两个fd 是不同的，所以能 accept 多次
-
-- **客户端调用close后，连接是断开的流程是什么?**
-
-  - 就是四次挥手流程
-
-- **IO有哪两种操作？**
-
-  - 同步IO：必须等待 IO 操作完成后，控制权才返回给用户进程 。 
-  - 异步IO：无须等待 IO 操作完成，就将控制权返回给用户进程 。 
-
-- **网络IO发生时，设计哪些对象与操作？**
-
-  - 会涉及两个系统对象：调用这个 IO 的 进程，系统内核。
-  - 当一个 read操作发生时，会经历两个阶段:
-    - 等待数据准备; 
-    - 将数据从内核拷贝到进程中。
-
-- **简单介绍一下4中IO模型。**
-
-  - 阻塞IO：阻塞是指 IO 操作需要彻底完成后才返回到用户空间
-
-    > 阻塞 IO 模型的特点就是：在 IO 执行的两个阶段(等待数据和拷贝数据)都被阻塞了 。
-
-  - 非阻塞IO：非阻塞是指 IO 操作被调用后立即返回给用户一个状态值， 不需要等到 IO 操作彻底完成。
-
-    > `fcntl( fd, F_SETFL, O_NONBLOCK );` 来设置socket成为非阻塞IO
-
-  - 多路IO复用（事件驱动IO）：多路 IO复用 可以监视多个描述符， 一旦某个描述符就绪( 读就绪或写就绪)，能够通知程序进行相应的读写操作。 
-
-    > 调用API后整个进程会被阻塞，而且存在两个系统调用(select与revcfrom)，如果连接数不多，不能体现优势。
-
-  - 异步IO：
-
-    - 用户角度：用户进程发起 read操作之后，立刻就可以开始去做其他的事;
-    - 内核角度：当它收到一个异步的 read请求操作之后，首先会立刻返回，所以不会对用户进程产生任何阻塞。 然后，内核会等待数据准备完成，然后将数据拷贝到用户内存中，当这一切完成后，内核会给用户进程发送一个信号，返回 read操作已完成的信息 。
-
-  > + 阻塞 IO、非阻塞 IO 及多路 IO 复用都属于同步 IO。
-  > + 非阻塞 IO在执行 recvfrom 候，若内核的数据没有准备好，不会阻塞进程 。 但当内核中数据准备好时， recvfrom 会将数据从内核拷贝到用户内存中，这时进程仍被阻塞。 
-  > + 异步 IO 不同， 当进程发起 IO 操作之后，就直接返回，直到内核发送一个信号，告诉进程 IO 已完成，整个过程中进程完全没有被阻塞。
+  ```c
+  int a = 0x12345678
+  1003:大端:12	小端:78
+  1002:大端:34	小端:56
+  1001:大端:56	小端:34
+  1000:大端:78	小端:12
+  ```
 
 ---
+
+##### 2. **介绍一下你知道的网络字节序和主机字节序的转换函数：**
+
++ h表示host，n表示network，l表示32位长整数，s表示16位短整数。
+  + hton： **将数据从主机字节序转换成网络字节序**
+  + ntoh： **将数据从网络字节序转换为主机字节序**
+
+---
+
+##### 3.你知道哪些IP转换函数？
+
++ 对于IPv4地址和IPv6地址都适用。函数名中p和n分别代表表达(presentation)和数值(numeric)。
+
+```c
+#include <arpa/inet.h>
+
+/*将strptr中的IP字符串传给addrptr*/
+int inet_pton(int family, const char *strptr, void*addrptr);
+inet_pton( AF_INET, ip, &address.sin_addr );
+//返回：若成功则为1，若输入不是有效的表达格式则为 0，若出错则为-1
+/*将addrptr中的数据传给strptr*/
+const char *inet_ntop(int family, const void *addrptr, char *strptr, size_t len);
+printf("client IP:%s\tport:%d\n",  
+  			inet_ntop(AF_INET, &clie_addr.sin_addr.s_addr,clie_IP, sizeof(clie_IP)), 	
+				ntohs(clie_addr.sin_port));
+//返回：若成功则为指向结果的指针，若出错则为NULL
+```
+
+---
+
+##### 4.bind函数的使用
+
++ 将 文件描述符 和 IP地址与端口号信息 绑定在一起，使sockfd这个用于网络通讯的文件描述符监听address所描述的地址和端口号。
+
+```c++
+struct sockaddr_in clien_addr;
+bzero(&clien_addr,sizeof(clien_addr));
+clien_addr.sin_family = AF_INET;
+inet_pton(AF_INET, ip, &clien_addr.sin_addr);
+clien_addr.sin_port = hton(port);
+
+bind(listenfd, (struct sockaddr*)&clien_addr, sizeof(clien_addr));
+```
+
+---
+
+##### 5.为什么需要端口复用
+
++ 当端口占用的进程结束任务后断开连接，在TCP断开链接需要四次握手，等待一个TIME_WAIT时间后断开TCP连接，才能继续使用端口。
++ SO_REUSEADDR这个选项就是告诉OS如果一个端口处于TIME_WAIT状态,  不需要继续等待TIME_WAIT时间结束直接使用。
+
+```c
+int opt = 1;
+setsockopt(listenfd, SOL_SOCKET, SO_REUSEADDR, &opt, sizeof(opt));   
+setsockopt(sockfd, SOL_SOCKET, SO_REUSEADDR, (const voidvoid *)&opt, sizeof(opt));
+```
+
+---
+
+##### 6. **TCP进行socket编程的步骤**
+
+- 服务端和客户端初始化 socket ，得到文件描述符; 
+- 服务端调用 bind ，将绑定在 IP 地址和端口; 
+- 服务端调用 listen ，进行监听;
+- 服务端调用 accept ，等待客户端连接；
+- 客户端调用 connect ，向服务器端的地址和端口发起连接请求;
+- 服务端 accept 返回用于传输的 socket 的文件描述符;
+- 客户端调用 write 写入数据;服务端调用 read 读取数据;
+- 客户端断开连接时，会调用 close ，那么服务端 read 读取数据的时候，就会读取到了 EOF ， 待处理完数据后，
+- 服务端调用 close ，表示连接关闭。
+
+---
+
+##### 7. **服务器端会维护哪两个队列？** 
+
+- 未完成连接队列(SYN 队列):接收到一个 SYN 建立连接请求，处于 SYN_RCVD 状态; 
+- 已完成连接队列(Accpet 队列):已完成 TCP 三次握手过程，处于 ESTABLISHED 状态;
+
+---
+
+##### 8. **服务器端进行TCP连接(socket连接)时，内核的工作流程**
+
+- 当客户端发送的SYN请求报文到达后，插入到SYN 队列，随后给对方发送ACK确认报文
+- 当接收到客户端的ACK确认报文后，应用程序从Accpet 队列中取出已完成连接的socket
+
+##### 9. **socket的各个步骤对应 TCP 握手中的哪些阶段？**
+
+- 客户端初始化 socket ，调用 connect 后，进入SYS-SENT状态，是第一次握手阶段
+- 服务器端初始化 socket ，调用 bind 绑定在 IP 地址和端口，调用 listen 进行监听后，进入Listen状态
+- 服务器端在接收到客户端的 SYN 请求报文后， 调用 accept ，等待客户端连接，并回复ACK确认报文，进入 SYN-RCVD状态
+- 客户端接收到ACK确认报文后，connect函数返回文件操作符，回复ACK确认报文，进入established状态
+- 服务器端收到对方的ACK确认报文后，accpet API 函数返回 文件操作符，进入established状态
+
+##### 10. **为什么一个socket可以accept多次？**
+
+- 输入参数 fd 是从 socket， bind， listen 中沿用下来的 socket 句柄值，是在指定的端口处监昕所有的连接请求。
+- 调用 accept() 是从 socket fd 的请求队列抽取第一个连接信息，创建新的同类型 socket 句柄 fd 来进行后续操作。
+- 两个fd 是不同的，所以能 accept 多次
+
+##### 11. **客户端调用close后，连接是断开的流程是什么?**
+
+- 就是四次挥手流程
+
+##### 12. **IO有哪两种操作？**
+
+- 同步IO：必须等待 IO 操作完成后，控制权才返回给用户进程 。 
+- 异步IO：无须等待 IO 操作完成，就将控制权返回给用户进程 。 
+
+##### 13. **网络IO发生时，设计哪些对象与操作？**
+
+- 会涉及两个系统对象：调用这个 IO 的 进程，系统内核。
+- 当一个 read操作发生时，会经历两个阶段:
+  - 等待数据准备; 
+  - 将数据从内核拷贝到进程中。
+
+
 
 ### 2.IO复用
 
-- **介绍一下 select 系统调用设计的函数**
+##### 1. **简单介绍一下4中IO模型。**
+
+- 阻塞IO：阻塞是指 IO 操作需要彻底完成后才返回到用户空间
+
+  > 阻塞 IO 模型的特点就是：在 IO 执行的两个阶段(等待数据和拷贝数据)都被阻塞了 。
+
+- 非阻塞IO：非阻塞是指 IO 操作被调用后立即返回给用户一个状态值， 不需要等到 IO 操作彻底完成。
+
+  > `fcntl( fd, F_SETFL, O_NONBLOCK );` 来设置socket成为非阻塞IO
+
+- 多路IO复用（事件驱动IO）：多路 IO复用 可以监视多个描述符， 一旦某个描述符就绪( 读就绪或写就绪)，能够通知程序进行相应的读写操作。 
+
+  > 调用API后整个进程会被阻塞，而且存在两个系统调用(select与revcfrom)，如果连接数不多，不能体现优势。
+
+- 异步IO：
+
+  - 用户角度：用户进程发起 read操作之后，立刻就可以开始去做其他的事;
+  - 内核角度：当它收到一个异步的 read请求操作之后，首先会立刻返回，所以不会对用户进程产生任何阻塞。 然后，内核会等待数据准备完成，然后将数据拷贝到用户内存中，当这一切完成后，内核会给用户进程发送一个信号，返回 read操作已完成的信息 。
+
+> + 阻塞 IO、非阻塞 IO 及多路 IO 复用都属于同步 IO。
+> + 非阻塞 IO在执行 recvfrom 候，若内核的数据没有准备好，不会阻塞进程 。 但当内核中数据准备好时， recvfrom 会将数据从内核拷贝到用户内存中，这时进程仍被阻塞。 
+> + 异步 IO 不同， 当进程发起 IO 操作之后，就直接返回，直到内核发送一个信号，告诉进程 IO 已完成，整个过程中进程完全没有被阻塞。
+
+---
+
+##### 2. **介绍一下 select 系统调用设计的函数**
+
+```c++
+#include <sys/select.h>
+void FD_ZERO(fd_set *set); 						//把文件描述符集合里所有位清0
+void FD_CLR(int fd, fd_set *set); 		//把文件描述符集合里fd清0
+int  FD_ISSET(int fd, fd_set *set); 	//测试文件描述符集合里fd是否置1
+void FD_SET(int fd, fd_set *set); 		//把文件描述符集合里fd位置1
+
+struct timeval {
+  	long tv_sec; /* seconds */  
+  	long tv_usec; /* microseconds */
+};
+
+int select(int nfds, fd_set *readfds, fd_set *writefds, fd_set *exceptfds, 
+           struct timeval *timeout);
+```
+
+**参数：**
+
++ nfds： 指定被监听的文件描述符的总数。通常设置为被监听的所有fd中的最大值加1，因为fd从0开始计数的。
+
++ readfds：  监控有读数据到达文件描述符集合，传入传出参数
+
++ writefds： 监控写数据到达文件描述符集合，传入传出参数
+
++ exceptfds： 监控异常发生达文件描述符集合,如带外数据到达异常，传入传出参数
+
++ timeout： 定时阻塞监控时间，3种情况
+
+  1. NULL，永远等下去
+
+  2. 设置timeval，等待固定时间
+
+  3. 设置timeval里时间均为0，检查描述字后立即返回，轮询
+
+**返回值：**
+
++ 成功： **所监听的所有 监听集合中，满足条件的总数**
++ 失败： 返回 -1 并设置errno
+
+---
+
+##### 3.**介绍一下 poll 系统调用函数**
+
+```c
+#include <poll.h>
+
+struct pollfd {
+    int fd; /* 文件描述符 */
+		short events; /* 监控的事件：主要是 POLLIN,POLLOUT,POLLERR */
+		short revents; /* 监控事件中满足条件返回的事件，由内核填充 */
+};
+
+int poll(struct pollfd *fds, nfds_t nfds, int timeout);
+```
+
+**参数：**
+
++ fds： pollfd结构类型的数组，它指定所有我们感兴趣的文件描述符上发生的可读，可写和异常等事件。
++ nfds： 指定被监听时间集合fds的大小。
++ timeout： 毫秒级等待
+  + -1：阻塞等待，#define INFTIM -1         Linux中没有定义此宏
+  + = 0：立即返回，不阻塞进程
+  + \> 0：等待指定毫秒数，如当前系统时间精度不够毫秒，向上取值
+
+**返回值：**
+
++ 成功： 所监听的所有 监听集合中，满足条件的总数
++ 失败： 返回 -1 并设置errno
+
+---
+
+##### 4. 介绍一下 epoll 系统调用函数
+
++ epoll_create 函数：创建一个epoll句柄，参数size用来告诉内核监听的文件描述符的个数
 
   ```c++
-  #include <sys/select.h>
-  void FD_ZERO(fd_set *set); 						//把文件描述符集合里所有位清0
-  void FD_CLR(int fd, fd_set *set); 		//把文件描述符集合里fd清0
-  int  FD_ISSET(int fd, fd_set *set); 	//测试文件描述符集合里fd是否置1
-  void FD_SET(int fd, fd_set *set); 		//把文件描述符集合里fd位置1
+  #include <sys/epoll.h>
   
-  struct timeval {
-    	long tv_sec; /* seconds */  
-    	long tv_usec; /* microseconds */
-  };
-  
-  int select(int nfds, fd_set *readfds, fd_set *writefds, fd_set *exceptfds, 
-             struct timeval *timeout);
+  int epoll_create(int size);
+  ssize_t efd = epoll_create(OPEN_MAX);   
   ```
 
-  **参数：**
+  + 参数：
+    + size：监听数目(告诉Linux内核创建多大的epoll模型)，创建多大结点的红黑树，只是建议值，
+  + 返回值：
+    + 成功返回 文件描述符，指向红黑树的根
+    + 失败返回 -1
 
-  + nfds： 指定被监听的文件描述符的总数。通常设置为被监听的所有fd中的最大值加1，因为fd从0开始计数的。
++ epoll_ctl 函数：控制某个epoll监控的文件描述符上的事件：注册、修改、删除。
 
-  + readfds：  监控有读数据到达文件描述符集合，传入传出参数
-
-  + writefds： 监控写数据到达文件描述符集合，传入传出参数
-
-  + exceptfds： 监控异常发生达文件描述符集合,如带外数据到达异常，传入传出参数
-
-  + timeout： 定时阻塞监控时间，3种情况
-
-    1. NULL，永远等下去
-
-    2. 设置timeval，等待固定时间
-
-    3. 设置timeval里时间均为0，检查描述字后立即返回，轮询
-
-  **返回值：**
-
-  + 成功： **所监听的所有 监听集合中，满足条件的总数**
-  + 失败： 返回 -1 并设置errno
-
-
----
-
-+ **简单介绍一下select调用过程。**
-
-  1. 在进行 `socket, bind, listen` 后，得到连接请求描述符 `listenfd`。设置数组`client[FD_SETSIZE]`存放文件描述符，全部初始化为 -1。
-
-  2. 设置 存放文件描述符集合 `fd_set rset`，使用 `FD_ZERO(rset)` 进行清零，使用 `FD_SET(listenfd)` 将 `listenfd` 加入集合
-
-  3. 设置 `maxfd = listenfd + 1` ，进行 while 循环，将 `rset` 赋给临时的` readset`，调用 `select` 函数
-
-     > `select (maxfd, &readset,NULL, NULL, NULL)`
-
-  4. 等待 `select` 有返回值时，得到就绪的文件操作符数目 `nready`，先进行判断是否合理，然后利用 `FD_ISSET(listenfd, &rset)`  判断是否有新的连接
-
-  5. 如果有，则调用 `accept` ，返回连接后的文件描述符 `connfd` 。使用 `FD_SET(connfd, &readset); ` 将 `connfd` 放入 `readset` 集合中。
-
-  6. 遍历 `client` 数组，将 `connfd` 放入合适位置，`nready--` 。最后更新 `maxfd`
-
-  7. 随后遍历 client 数组，找出其中的 文件描述符， 使用 `FD_ISSET(sockfd, &rset)` 操作，判断是否存在读事件，如果是，则继续进行任务操作，如 read。  `nready--` 。
-
-  8. 当 `nready == 0` 时，while 循环跳出，结束。关闭 `listenfd`。 
-
----
-
-+ **介绍一下 poll 系统调用函数**
-
-  ```c
-  #include <poll.h>
-  
-  struct pollfd {
-      int fd; /* 文件描述符 */
-  		short events; /* 监控的事件：主要是 POLLIN,POLLOUT,POLLERR */
-  		short revents; /* 监控事件中满足条件返回的事件，由内核填充 */
+  ```c++
+  struct epoll_event {
+  			__uint32_t events; /* Epoll events */
+  			epoll_data_t data; /* User data variable */
   };
+  typedef union epoll_data {
+      int fd;					//与epoll_ctl函数中的fd对应
+      ...
+  } epoll_data_t;
   
-  int poll(struct pollfd *fds, nfds_t nfds, int timeout);
+  int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event);
+  /*
+  	epoll_event中的 events:
+  	EPOLLIN ：	表示对应的文件描述符可以读（包括对端SOCKET正常关闭）
+  	EPOLLOUT：	表示对应的文件描述符可以写
+  */
+  struct epoll_event tep;
+  tep.events = EPOLLIN; 
+  tep.data.fd = listenfd;          
+  res = epoll_ctl(efd, EPOLL_CTL_ADD, listenfd, &tep); 
   ```
 
-  **参数：**
+  + 参数：
+    + epfd ： epoll_create成功返回的文件描述符，即红黑树树根
+    + op ： 在红黑树树上进心增删改：
+      + EPOLL_CTL_ADD (注册新的fd到epfd)
+      + EPOLL_CTL_MOD (修改已经注册的fd的监听事件)
+      + EPOLL_CTL_DEL (从epfd删除一个fd)
+    + fd ： 具体需要操作的文件描述符
+    + event： 告诉内核需要监听的事件(往往只需要 events 与 data.fd)
+  + 返回值：
+    + 成功返回 0
+    + 失败返回 -1
 
-  + fds： pollfd结构类型的数组，它指定所有我们感兴趣的文件描述符上发生的可读，可写和异常等事件。
-  + nfds： 指定被监听时间集合fds的大小。
-  + timeout： 毫秒级等待
-    + -1：阻塞等待，#define INFTIM -1         Linux中没有定义此宏
-    + = 0：立即返回，不阻塞进程
-    + \> 0：等待指定毫秒数，如当前系统时间精度不够毫秒，向上取值
++ epoll_wait函数： 等待所监控文件描述符上有事件的产生，类似于 select() 调用。
 
-  **返回值：**
+  ```c++
+  #include <sys/epoll.h>
+  
+  int epoll_wait(int epfd, struct epoll_event *events, int maxevents, int timeout);
+  struct epoll_event ep[OPEN_MAX];
+  nready = epoll_wait(efd, ep, OPEN_MAX, -1); 
+  ```
 
-  + 成功： 所监听的所有 监听集合中，满足条件的总数
-  + 失败： 返回 -1 并设置errno
+  + 参数：
 
----
+    + epfd ： epoll_create成功返回的文件描述符，即红黑树树根
 
-+ **简单介绍一下poll调用过程。**
+    + events ： 是一个传出参数数组
+  
+      > epoll_ctl中是传入变量的地址，这个变量初始化好就行
+      >
+      > epoll_wait中是传入数组，传出满足事件的文件描述符，每个元素都是epoll_event结构体
 
-  + 定义 pollfd 结构体数组 `struct pollfd client[1024]`，将第一个`client[0]`设置fd与events设置为listenfd与POLLIN，其余fd为-1 ，设置maxi = 1。
+    + maxevents ： 告之内核这个events有多大，这个maxevents的值不能大于创建epoll_create()时的size，
 
-  + 进行循环，调用 poll 函数， 返回就绪文件描述符个数，查看`client[0]`是否为 POLLIN事件(`client[0].revents & POLLIN`) 
+    + timeout ：是超时时间
+  
+      +  -1： 阻塞
+      +  0： 立即返回，非阻塞
+      +  \>0： 指定毫秒
 
-    > `nready = poll(client, maxi, -1);`
-
-  + 如果是，调用accept得到新的连接文件描述符connfd，将其存放到client数组中合适的位置。更新maxi,nready--。
-
-  + 遍历前面`1-maxi`个client数组，找出就绪的文件描述符，查看是否为POLLIN事件，如果事，则进行下面的任务处理，nready--。
-
-  + 当 `nready == 0` 时，while 循环跳出，结束。关闭 `listenfd`。
-
----
-
-+ **介绍一下 epoll 系统调用函数**
-
-  + epoll_create 函数：创建一个epoll句柄，参数size用来告诉内核监听的文件描述符的个数
-
-    ```c++
-    #include <sys/epoll.h>
-    
-    int epoll_create(int size);
-    ```
-
-    + 参数：
-      + size：监听数目(告诉Linux内核创建多大的epoll模型)，创建多大结点的红黑树，只是建议值，
-    + 返回值：
-      + 成功返回 文件描述符，指向红黑树的根
-      + 失败返回 -1
-
-  + epoll_ctl 函数：控制某个epoll监控的文件描述符上的事件：注册、修改、删除。
-
-    ```c++
-     #include <sys/epoll.h>
-    
-    struct epoll_event {
-    			__uint32_t events; /* Epoll events */
-    			epoll_data_t data; /* User data variable */
-    };
-    
-    typedef union epoll_data {
-        void *ptr;
-        int fd;					//与epoll_ctl函数中的fd对应
-        uint32_t u32;
-        uint64_t u64;
-    } epoll_data_t;
-    
-    int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event);
-    /*
-    	epoll_event中的 events:
-    	EPOLLIN ：	表示对应的文件描述符可以读（包括对端SOCKET正常关闭）
-    	EPOLLOUT：	表示对应的文件描述符可以写
-    	EPOLLPRI：	表示对应的文件描述符有紧急的数据可读（这里应该表示有带外数据到来）
-    	EPOLLERR：	表示对应的文件描述符发生错误
-    	EPOLLHUP：	表示对应的文件描述符被挂断；
-    	EPOLLET： 	将EPOLL设为边缘触发(Edge Triggered)模式，这是相对于水平触发(Level Triggered)而言的
-    	EPOLLONESHOT：只监听一次事件，当监听完这次事件之后，如果还需要继续监听这个socket的话，需要再次把这个socket加入到EPOLL队列里
-    */
-    ```
-
-    + 参数：
-      + epfd ： epoll_create成功返回的文件描述符，即红黑树树根
-      + op ： 在红黑树树上进心增删改：
-        + EPOLL_CTL_ADD (注册新的fd到epfd)
-        + EPOLL_CTL_MOD (修改已经注册的fd的监听事件)
-        + EPOLL_CTL_DEL (从epfd删除一个fd)
-      + fd ： 具体需要操作的文件描述符
-      + event： 告诉内核需要监听的事件(往往只需要 events 与 data.fd)
-    + 返回值：
-      + 成功返回 0
-      + 失败返回 -1
-
-  + epoll_wait函数： 等待所监控文件描述符上有事件的产生，类似于 select() 调用。
-
-    ```c++
-    #include <sys/epoll.h>
-    
-    int epoll_wait(int epfd, struct epoll_event *events, int maxevents, int timeout);
-    ```
-
-    + 参数：
-
-      + epfd ： epoll_create成功返回的文件描述符，即红黑树树根
-
-      + events ： 是一个传出参数数组
-
-        > epoll_ctl中是传入变量的地址，这个变量初始化好就行
-        >
-        > epoll_wait中是传入数组，传出满足事件的文件描述符，每个元素都是epoll_event结构体
-
-      + maxevents ： 告之内核这个events有多大，这个maxevents的值不能大于创建epoll_create()时的size，
-
-      + timeout ：是超时时间
-
-        +  -1： 阻塞
-        +  0： 立即返回，非阻塞
-        +  \>0： 指定毫秒
-
-    + 返回值：
-
-      + 成功返回有多少文件描述符就绪
-      + 时间到时返回0，
-      + 出错返回-1
+  + 返回值：
+  
+    + 成功返回有多少文件描述符就绪
+    + 时间到时返回0，
+    + 出错返回-1
 
 ---
 
-+ **简单介绍一下 epoll 的调用过程**
+##### 5. **介绍一下 epoll 的两种触发模式**
 
-  1. 通过 `epoll_create` 函数创建 epoll 模型，返回红黑树的根结点作为文件描述符 efd。
++ **Level Triggered (LT 水平触发)** ：epoll的默认触发方式，既支持阻塞模式，也支持非阻塞模式，当被监控的文件描述符上有可读写事件发生时，epoll_wait()会通知处理程序去读写。一次性读写完未全部完成，那么下次调用 epoll_wait()时，还会通知在上次没读写完的文件描述符上继续读写
 
-  2. 创建epoll_event事件与数组(`struct epoll_event tep, ep[OPEN_MAX]; `)，将tep的event设置为EPOLLIN，data.fd 设置为 listenfd。利用 epoll_ctl 函数将 listen 与 tep 添加到 efd 的红黑树中
++ **Edge Triggered (ET 边缘触发)** ： 只支持非阻塞模式，当被监控的文件描述符上有可读写事件发生时，epoll_wait() 会通知处理程序去读写。一次性全部读写完未完成，那么下次调用epoll_wait()时，不会通知，即只会通知一次，直到该文件描述符上出现第二次可读写事件。
 
-     >  `res = epoll_ctl(efd, EPOLL_CTL_ADD, listenfd, &tep); `
-
-  3. 循环，将 数组 ep 代入epoll_wait函数等待文件描述符就绪，当就绪后，返回就绪的文件描述符数目
-
-     > ` nready = epoll_wait(efd, ep, OPEN_MAX, -1); ` 
-
-  4. 循环 ep 数组中前 nready 个元素，查看是否是EPOLLIN事件(`ep[i].events & EPOLLIN`) 
-
-  5. 如果是，则查看是否为listenfd 就绪(`ep[i].data.fd == listenfd`)，如果是，则调用accpet函数，返回新的连接文件描述符 connfd，重新赋值给 tep ，利用 epoll_ctl 函数将tep 加入红黑树中
-
-  6. 如果不是listenfd 就绪，则取出，赋值给sockef，利用它来完成其他任务操作。
+  > 最好是利用边缘触发，使用非阻塞fd，套上while循环将数据一次性读写完成，这样效率更高。
 
 ---
 
-+ **介绍一下 epoll 的两种触发模式**
+##### 6. **在ET模式下当多个连接同时到达时该怎么处理？**
 
-  + **Level Triggered (LT 水平触发)** ：epoll的默认触发方式，既支持阻塞模式，也支持非阻塞模式，当被监控的文件描述符上有可读写事件发生时，epoll_wait()会通知处理程序去读写。一次性读写完未全部完成，那么下次调用 epoll_wait()时，还会通知在上次没读写完的文件描述符上继续读写
++ 理论上如果多个连接同时到达，服务器的TCP就绪队列瞬间积累多个就绪连接，由于是边缘触发模式，epoll只会通知一次，accept只处理一个连接，导致TCP就绪队列中剩下的连接都得不到处理。
 
-  + **Edge Triggered (ET 边缘触发)** ： 只支持非阻塞模式，当被监控的文件描述符上有可读写事件发生时，epoll_wait() 会通知处理程序去读写。一次性全部读写完未完成，那么下次调用epoll_wait()时，不会通知，即只会通知一次，直到该文件描述符上出现第二次可读写事件。
-
-    > 最好是利用边缘触发，使用非阻塞fd，套上while循环将数据一次性读写完成，这样效率更高。
++ 解决办法是用while循环包住accept调用，处理完TCP就绪队列中的所有连接后再退出循环。如何知道是否处理完就绪队列中的所有连接呢？accept返回-1并且errno设置为EAGAIN就表示所有连接都处理完。
 
 ---
 
-+  **在ET模式下当多个连接同时到达时该怎么处理？**
+##### 7. **nigix的实现中多个连接同时到达如何处理？**
 
-   + 理论上如果多个连接同时到达，服务器的TCP就绪队列瞬间积累多个就绪连接，由于是边缘触发模式，epoll只会通知一次，accept只处理一个连接，导致TCP就绪队列中剩下的连接都得不到处理。
-
-   + 解决办法是用while循环包住accept调用，处理完TCP就绪队列中的所有连接后再退出循环。如何知道是否处理完就绪队列中的所有连接呢？accept返回-1并且errno设置为EAGAIN就表示所有连接都处理完。
-
----
-
-+  **nigix的实现中多个连接同时到达如何处理？**
-   + nigix 中 ，accept函数调用使用水平触发的fd，就是出于对丢失连接的考虑，所以不存在丢失连接的问题。
-   + 但是若系统中有大量不需要读写的就绪文件描述符，而它们每次都会返回，会大大降低处理程序检索自己关心的就绪文件描述符的效率。
++ nigix 中 ，accept函数调用使用水平触发的fd，就是出于对丢失连接的考虑，所以不存在丢失连接的问题。
++ 但是若系统中有大量不需要读写的就绪文件描述符，而它们每次都会返回，会大大降低处理程序检索自己关心的就绪文件描述符的效率。
 
 ---
 
-+ **使用Linux epoll模型，水平触发模式；当socket可写时，会不停的触发socket可写的事件，如何处理？**
-  + 平时不要把该描述符放进event_poll结构体中，当需要写该fd的时候，调用epoll_ctl把fd加入eventpoll里监听，可写的时候就往里写，写完再次调用epoll_ctl把fd移出event_poll，这种方法在发送很少数据的时候仍要执行两次epoll_ctl操作，有一定的操作代价
-  + 改进一下就是：平时不要把该描述符放进event_poll结构体中，需要写的时候调用write或者send写数据，如果返回值是EAGAIN（写缓冲区满了），那么这时候才执行第一种方法的步骤。
+##### 8. **使用Linux epoll模型，水平触发模式；当socket可写时，会不停的触发socket可写的事件，如何处理？**
+
++ 平时不要把该描述符放进event_poll结构体中，当需要写该fd的时候，调用epoll_ctl把fd加入eventpoll里监听，可写的时候就往里写，写完再次调用epoll_ctl把fd移出event_poll，这种方法在发送很少数据的时候仍要执行两次epoll_ctl操作，有一定的操作代价
++ 改进一下就是：平时不要把该描述符放进event_poll结构体中，需要写的时候调用write或者send写数据，如果返回值是EAGAIN（写缓冲区满了），那么这时候才执行第一种方法的步骤。
 
 ---
 
-+ **比较IO复用 select，poll，epoll 的区别**
+##### 9. **比较IO复用 select，poll，epoll 的区别**
 
-  + select、 poll和 epoll都是多路 IO 复用机制。 可以监视多个描述符， 一旦某个描述符就绪，会通知程序进行相应的读写操作。 但它们本质上都是同步 IO，因为它们都需要在读写事件就绪后自己负责进行读写，是阻塞的。
++ select、 poll和 epoll都是多路 IO 复用机制。 可以监视多个描述符， 一旦某个描述符就绪，会通知程序进行相应的读写操作。 但它们本质上都是同步 IO，因为它们都需要在读写事件就绪后自己负责进行读写，是阻塞的。
 
-  + select的优缺点：
++ select的优缺点：
 
+  + 优点：
     + select目前几乎在所有的平台上支持，其良好跨平台支持也是它的一个优点。
     + select()对于超时值提供了更好的精度，而 poll()是精度较差。
+  + 缺点：
     + select能监听的文件描述符个数受限于FD_SETSIZE,一般为1024
     + select采用的是轮询模型，如果链接客户端过多，会大大降低服务器响应效率
 
-  + poll的优缺点：
++ poll的优缺点：
 
+  + 优点：
     + 可以修改文件描述符的上限数目，优于select
     + 将监听集合 和 返回集合 实现了分离，不像select那么麻烦，搜索范围更小
     + poll在应付大数目的文件描述符时速度更快，对于 select 来说内核需要检查大量描述符对应的set中的每一个比特位，比较费时。
+  + 缺点：
     + 但还是需要将数组全部变量，找出已连接的文件描述符，而不是直接返回满足的文件描述符数组。
 
-  + epoll 的优点
++ epoll 的优点：
 
-    + 支持ET触发模式，其余两者只支持LT。
+  + 支持ET触发模式，其余两者只支持LT。
 
-    + 不是使用轮询的方式，不会随着fd数目的增加效率下降。只有活跃可用的fd才会调用callback函数；selet 与 poll 调用时都会对连接进行线性遍历，所以随着FD的增加会造成遍历速度慢的“线性下降性能问题”。
+  + 不是使用轮询的方式，不会随着fd数目的增加效率下降。只有活跃可用的fd才会调用callback函数；selet 与 poll 调用时都会对连接进行线性遍历，所以随着FD的增加会造成遍历速度慢的“线性下降性能问题”。
 
-    + 使用 mmap加速内核与用户空间的消息传递
+  + 使用 mmap加速内核与用户空间的消息传递
 
-      > 3者都需要内核把fd消息通知给用户空间，如何避免不必要的内存拷贝就显得尤为重要 。 
-      >
-      > epoll 通过内核 与用户空间 mmap 处于同一块内存实现的 。
-      >
-      > poll将传入的 pollfd数组拷贝到内核空间，因为拷贝操作和数组长度相关，时间上来看，这是一个 O(n)操作
-
----
-
-+ Libevent如何处理IO事件，信号事件，和定时事件
-
-
-
-
-
-
+    > 3者都需要内核把fd消息通知给用户空间，如何避免不必要的内存拷贝就显得尤为重要 。 
+    >
+    > epoll 通过内核 与用户空间 mmap 处于同一块内存实现的 。
+    >
+    > poll将传入的 pollfd数组拷贝到内核空间，因为拷贝操作和数组长度相关，时间上来看，这是一个 O(n)操作
 
 
 ---
-
-
-
-
 
 
 
@@ -1798,40 +2082,48 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 ---
 
-##### 介绍一下项目的流程
+##### 自我介绍
 
-+ epoll事件进行监听，如果有读事件，则主线程直接调用 read 将数据全部读入缓冲区
-+ 数据读完之后，将任务封装成 http_conn 类，线程池中子线程取出一个任务，执行任务中的process函数
-  + 首先解析 HTTP 请求
-  + 根据 HTTP 请求寻找资源，生成HTTP响应，通过分散写的方式将 响应头与响应文件一起写入
-+ 当epoll监听到写事件时，主线程直接调用 write 将数据写给客户端进程
-
----
-
-+ 解析消息的流程process
-  + 解析消息 process_read
-    + 当解析遇到空行时，说明消息头部字段解析完成，接下来解析的就是消息体
-    + 如果不是空行，则进行解析消息头的各个信息，比如connect，等等
-    + 等消息解析完之后就去分析目标文件的属性
-  + 分析目标文件的属性 do_request
-    + 将服务器中的资源根目录与请求内容结合，找到对应的资源的路径
-    + 然后分析路径与权限是否合法
-    + 最后打开寻找的路径的文件，创建内存映射，将需要写回的资源映射到地址上，等待之后的发送
-  + 生成响应 process_write
-    + 判断解析请求的返回值，根据请求结果来做对应的操作，如No resource等
-      + 添加响应状态行，响应头
-    + 将消息头和消息体分散写 write，使用writv
-      + 消息头就是上面根据请求来设置的消息头内容
-      + 消息体是mmap映射的资源
++ 来自东南大学网络空间安全学院，专业是计算机专业，专硕。
++ 可以使用C/C++语言进行开发，熟悉C/C++基本语法及其编程思想
+  - 熟悉C++的封装类，函数重载原理，多态机制，强制类型转换以及C++11新增语法
+  - 了解静态与动态链接库
+  - 了解STL，能够使用STL部分容器，例如vector, list, map等
++ 了解操作系统相关知识，例如进程，线程，虚拟内存等
++ 了解计算机网络相关知识，例如OSI七层模型与TCP/IP协议栈，以及TCP/UDP协议，HTTP/HTTPS等
++ 熟悉Socket编程，熟悉系统编程技术，多进程和多线程编程等
++ 掌握常见数据结构，例如单链表，双向链表，栈和队列，二叉树等
++ 掌握基础排序算法，例如选择，冒泡，快排，归并，堆排序等
 
 ---
 
 ##### **介绍一下你的WebServer项目**
 
-+ 自己用C++11改写了一个简单的Reactor高并发模型服务器。主线程初始化一个线程池，然后进行绑定IP与端口，创建socket socketfd，利用IO复用技术Epoll创建epoll模型efd，将socketfd添加至EPOLL中，进行监听事件与数据读写。定义httpconn类封装任务事件，定义httpconn类数组users；
++ 自己用C++11改写了一个简单的Reactor高并发模型服务器。主线程初始化一个线程池，然后建立socket链接，进行绑定IP与端口，创建socketfd，利用IO复用技术Epoll模型efd，将socketfd添加至efd中，进行监听事件与数据读写。
++ 定义httpconn类封装任务事件，包括socket文件描述符，地址信息，读写缓存区已经HTTP相关内容；
 + 如果监听到连接事件发生，则进行accpet连接，新建socket文件描述符 connfd ，然后将连接的用户数据放入 users 数组中并初始化，顺便添加至epoll中进行监听。
-+ 如果有EPOLLIN事件，则先将对应connfd的数据一次性读完，然后将任务添加到线程池中的任务队列中，让线程池中的线程进行逻辑任务操作，即解析HTTP请求，生成响应发送。
-+ 如果有EPOLLOUT事件，则将将数据一次性写完
++ 如果有写事件出发，则将读数据的操作交给线程池中的线程将对应connfd的数据一次性读，读入读缓冲区
++ 数据读完之后，将任务封装成 http_conn 类，线程池中子线程取出一个任务，执行任务中的process函数，即解析HTTP请求，生成响应写入写缓冲区，触发可写操作。
++ 监听到可写操作，主线程让子线程去完成写操作，将写写缓冲区的内容写给客户端
+
+---
+
+##### 解析消息的流程process
+
+- 解析消息 process_read
+  - 当解析遇到空行时，说明消息头部字段解析完成，接下来解析的就是消息体
+  - 如果不是空行，则进行解析消息头的各个信息，比如connect，等等
+  - 等消息解析完之后就去分析目标文件的属性
+- 分析目标文件的属性 do_request
+  - 将服务器中的资源根目录与请求内容结合，找到对应的资源的路径
+  - 然后分析路径与权限是否合法
+  - 最后打开寻找的路径的文件，创建内存映射，将需要写回的资源映射到地址上，等待之后的发送
+- 生成响应 process_write
+  - 判断解析请求的返回值，根据请求结果来做对应的操作，如No resource等
+    - 添加响应状态行，响应头
+  - 将消息头和消息体分散写 write，使用writv
+    - 消息头就是上面根据请求来设置的消息头内容
+    - 消息体是mmap映射的资源
 
 ---
 
@@ -1881,6 +2173,21 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 
 ---
 
+##### 如何设计一个多线程下安全的队列
+
+```c++
+struct Pool {
+  std::mutex mtx;
+  std::condition_variable cond;
+  bool isClosed;
+  std::queue<int> value;
+};
+```
+
+
+
+---
+
 ##### 你是怎么设计线程池的？
 
 + 定义了一个ThreadPool类，其中的将一个Pool类与Pool类型的智能指针pool。其中Pool类有四个元素，分别为：
@@ -1917,7 +2224,24 @@ cond.notify_one();
 ##### 为什么需要定时器
 
 + 因为系统中的文件描述符资源有限，如果一直存在不活跃的文件描述符，会消耗文件资源
-+ 
+
+##### 为什么利用最大堆来设计定时器的？
+
+对于时间轮：
+
++ 添加一个定时器的时间复杂度是O(1)
+
++ 删除一个定时器的时间复杂度也是O(1)
+
++ 执行一个定时器的时间复杂度是O(n)
+
+对时间堆：
+
++ 添加一个定时器的时间复杂度是O(lgn)
++ 删除一个定时器的时间复杂度是O(1)
++ 执行一个定时器的时间复杂度是O(1)
+
+因此，时间堆的效率是很高的。
 
 ---
 
