--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -2,6 +2,47 @@
 
 ### 1.gdb
 
+##### 6.写C++代码时有一类错误是coredump ，调试这个错误?
+
+coredump是程序由于异常或者bug在运行时异常退出或者终止，在一定的条件下生成的一个叫做core的文 件，这个core文件会记录程序在运行时的内存，寄存器状态，内存指针和函数堆栈信息等等。对这个文 件进行分析可以定位到程序异常的时候对应的堆栈调用信息。
+
+使用gdb命令对core文件进行调试 以下例子在Linux上编写一段代码并导致segment fault 并产生core文件
+
+```bash
+mkdir coredumpTest
+vim coredumpTest.cpp
+```
+
+在编辑器内键入
+
+```c++
+#include<stdio.h>
+int main(){
+    int i;
+    scanf("%d",i);//正确的应该是&i,这里使用i会导致segment fault 
+  	printf("%d\n",i);
+    return 0;
+}
+```
+
+编译
+
+```c++
+g++ coredumpTest.cpp -g -o coredumpTest
+```
+
+运行
+
+```c++
+ ./coredumpTest
+```
+
+使用gdb调试coredump
+
+```c++
+ gdb [可执行文件名] [core文件名]
+```
+
 
 
 ---
@@ -1476,28 +1517,28 @@
 
 ##### 2. **系统并发和并行，分得清吗?**
 
-+ 并发是指宏观上在一段时间内能同时运行多个程序，而并行则指同一时刻能运行多个指令。
-+ 并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
++ 并发是指宏观上在一段时间内能同时运行多个程序
++ 并行则指同一时刻能运行多个指令。
+  + 并行需要硬件支持，如多流水线、多核处理器或者分布式计算系统。
 
 > 操作系统通过引入进程和线程，使得程序能够并发运行。
 
 ##### 3. **局部性原理你知道吗?主要有哪两大局部性原理?各自是什么?**
 
-+ 时间局部性：如果执行了程序中的某条指令，那么不久后这条指令很有可能再次执行；如果某个数据被访问过，不久之后该数据很可能再次被访问。(因为程序中存在大量的循环) 
-+ 空间局部性：一旦程序访问了某个存储单元，在不久之后，其附近的存储单元也很有可能被访问。(因为很多数据在内存中都是连续存放的，并且程序的指令也是顺序地在内存中存放的)
++ 时间局部性：程序中的某条指令或者数据被访问过，不久之后该数据很可能再次被访问。(因为程序中存在大量的循环) 
++ 空间局部性：一旦程序访问了某个存储单元，在不久之后附近的存储单元也很有可能被访问。(因为很多数据在内存中都是连续存放的，并且程序的指令也是顺序地在内存中存放的)
 
 ---
 
 ##### 4. Linux中异常和中断的区别
 
-+ 中断是由硬件设备产生的，从物理上说就是电信号，之后通过中断控制器发送给CPU，CPU判断收到的中断来自于哪个硬件设备(这定义在内核中)，最后由CPU发送给内核，内核处理中断。
-+ 异常是由 CPU 执行指令的内部事件引起，如地址越界、算术溢出等。它会发送给内核，要求内核处理这些异常
++ 中断是由硬件设备产生，通过中断控制器发送给CPU，CPU判断收到的中断来自于哪个硬件设备后发送给内核处理
++ 异常是由 CPU 执行指令的内部事件引起，如地址越界、算术溢出等。它会发送给内核处理
 + 相同点：
   + 最后都是由CPU发送给内核，由内核去处理 
   + 处理程序的流程设计上是相似的
 + 不同点：
-  + 产生源不相同，异常是由CPU产生的，而中断是由硬件设备产生的 
-  + 内核需要根据是异常还是中断调用不同的处理程序 
+  + 产生源不相同，中断是由硬件设备产生的，异常是由CPU产生的
   + 中断不是时钟同步的，这意味着中断可能随时到来；异常由于是CPU产生的，所以它是时钟同步的 
   + 当处理中断时，处于中断上下文中；处理异常时，处于进程上下文中
 
@@ -1521,15 +1562,22 @@
 
 ##### 6.为什么要有用户态和内核态，哪些操作会是用户态切换到内核态
 
-+ 由于需要限制不同的程序之间的访问能力, 防止他们获取别的程序的内存数据, 或者获取外围设备的数据, 并发送到网络, CPU划分出两个权限等级 – 用户态和内核态。
++ 限制不同的程序之间的访问能力， 防止他们获取别的程序的内存数据，CPU划分出两个权限等级 – 用户态和内核态。
 + **用户态切换到内核态的3种方式**
-  + 系统调用
-    + 用户态进程通过系统调用申请使用操作系统提供的服务程序完成工作，系统调用的核心还是使用了操作系统为用户特别开放的一个中断来实现，例如Linux的int 80h中断
   + 中断
     + 当外围设备完成用户请求的操作后，会向CPU发出相应的中断信号，这时CPU会暂停执行下一条即将要执行的指令转而去执行与中断信号对应的处理程序
-    + 如果先前执行的指令是用户态下的程序，那么这个转换的过程自然也就发生了由用户态到内核态的切换。
+  + 系统调用
+    + 用户态进程通过系统调用，使用操作系统提供的服务程序完成工作，理论上还是利用中断
   + 异常
-    + 当CPU在执行运行在用户态下的程序时，发生了某些事先不可知的异常，这时会触发由当前运行进程切换到处理此异常的内核相关程序中，也就转到了内核态，比如缺页异常。
+    + 当CPU在执行用户态程序时，发生了异常，这时会触发由当前运行进程切换到处理此异常的内核相关程序中，也就转到了内核态，比如缺页异常。
+
+---
+
+##### 7.处理系统调用的流程
+
++ 当应用程序使用系统调用时，会产生一个中断。
++ 发生中断后， CPU 会中断当前在执行的用户程序，转而跳转到中断处理程序，也就是开始执行内核程序。
++ 内核处理完后，主动触发中断，把 CPU 执行权限交回给用户程序，回到用户态继续工作。
 
 ---
 
