--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -6,7 +6,6 @@
 + 给一个字符串，输出最长连续子串。
 + n的所有最小因数集合，如8，其最小质数集合为{1,2,2,2}
 + 手撕 unique_pointer
-+ [个人博客 - 设计parser](https://xyfu.me/posts/de9ec62b/)
 + 布隆过滤器
 + hash表解决冲突的方法
 + 红黑树性质
@@ -83,18 +82,138 @@
 + `void *calloc(size_t nobj, size_t size);` 分配指定 数目，长度 的存储空间， 初始化为0
 + `void *realloc(void *ptr, size_t newsize);` 增加或减少以前分配区的长度，新增区初始值不确定
 
+---
+
 ##### 5. **C++ 中的 string 与 C 中的 `char *` 有什么区别？**
 
 + string继承自 basic_string ，是对 `char` 进行了封装，包含 char 数组，容量，长度等属性
 + string可以动态扩展，每次扩展是原空间的两倍，将原内容拷贝进去。
+
+---
+
+##### 6.C++和Python的区别
+
+包括但不限于:
+
++ Python是脚本语言，解释执行的，C++是编译语言，是需要编译后在特定平台运行的。
++  python可以很方便的跨平台，但是效率没有C++高。
++ Python使用缩进来区分不同的代码块，C++使用花括号来区分
++ C++中需要事先定义变量的类型，而Python不需要
++ Python的库函数比C++的多，调用起来很方便
+
+---
+
+##### 7.C和C++的区别
+
++ C++提出了面向对象的概念，使用class或struct定义类，而C是面向过程，struct是结构体
++ C++可以重载，覆盖实现多态，C语言不允许。
++ C++可以继承，C也不允许
++ 在C++中，除了值和指针之外，新增了引用。
+
+- C++中new和delete是对内存分配的运算符，取代了C中的malloc和free。
+- C++中用来做控制态输入输出的iostream类库替代了标准C中的stdio函数库
+
+---
+
+#####  8.C++与Java的区别
+
+- Java语言完全面向对象，给开发人员提供了更为简洁的语法
+- Java的可移植性更强，JVM可以安装到任何的操作系统上
+- Java语言中没有指针的概念，引入了真正的数组，将指针从语言中去掉，防止指针操作不规范带来的安全问题
+- C++的执行效率与编译速度更快
+
+**垃圾回收**
+
+- C++用析构函数回收垃圾，写C和C++程序时一定要注意内存的申请和释放
+- Java语言不使用指针，内存的分配和回收都是自动进行的，程序员无须考虑内存碎片的问题
+
+---
+
+##### 9.extern"C"的用法
+
++ 告诉C++编译器，下面的代码按照C的方式进行编译，不要对这些函数进行名字重整（function name mangling）。通常在C++程序中使用C函数或者模块时，需要用到这个功能。
+
+---
+
+##### 10.C和C++的类型安全
+
++ 类型安全很大程度上可以等价于内存安全，类型安全的代码不会试图访问自己没被授权的内存区域。
++ 有的时候也用“类型安全”形容某个程序，判别的标准在于该程序是否隐含类型错误。
+
+- C语言中
+  - malloc函数类型不匹配时，编译器并不会报错：`int* pInt=(int*)malloc(100*sizeof(char))`
+- C++中
+  - new对比与malloc就更安全了，因为返回的指针类型严格与对象匹配
+
+---
+
+##### 11.如何用代码判断大小端存储
+
++ 大端存储：字数据的高字节存储在低地址中
+
++ 小端存储：字数据的低字节存储在低地址中
+
+例如：32bit的数字0x12345678
+
+小端模式中的存储方式为：
+
+<div align="center">
+    <img src="../图片/21.png"
+        	width="600px">
+</div>
+
+
+大端模式中的存储方式为：
+
+<div align="center">
+    <img src="../图片/22.png"
+        	width="600px">
+</div>
+
++ 使用强制类型转换** ： 由于int和char的长度不同，借助int型转换成char型，只会留下低地址的部分
+
+```c++
+int a = 0x1234;
+char c = (char)(a);
+if (c == 0x12)
+  cout << "big endian" << endl;
+else if(c == 0x34)
+  cout << "little endian" << endl;
+```
+
+---
+
+##### 12.如何获得结构成员相对于结构开头的字节偏移量
+
+使用<stddef.h>头文件中的，offsetof宏。
+
+```c++
+#include <iostream>
+#include <stddef.h>
+using namespace std;
+#pragma pack(4) //指定4字节对齐方式就可以了。
+struct S {
+    int x;
+    char y;
+    int z;
+    double a;
+};
+int main(){
+    cout << offsetof(S, x) << endl; // 0
+    cout << offsetof(S, y) << endl; // 4
+    cout << offsetof(S, z) << endl; // 8
+    cout << offsetof(S, a) << endl; // 12
+    return 0;
+}
+```
+
+---
 
 ### C++基本介绍
 
 ---
 
 +  struct和union的区别
-+  知道虚函数表指针在内存中是怎么分布的吗？(我直接按照Lippman那本书回答)。
-+  虚函数表指针放在头部和尾部的好处分别是什么？(自己挖的坑。。)
 
 ---
 
@@ -278,32 +397,6 @@ const int sz = get_size();			// 不是常量表达式
 
 - define是在编译的**预处理**阶段起作用，只做替换，不做类型检查和计算，也不求解，容易产生错误；宏定义的数据没有分配内存空间，只是插入替换掉
 - const是在编译、运行的时候起作用；const常量有数据类型，编译器可以对其进行类型安全检查；const定义的变量只是值不能改变，但要分配内存空间。
-
----
-
-##### 13.C++的四种强制转换类型
-
-**reinterpret_cast** ：`reinpreter_cast (expression)`
-
-+ 
-
-**const_cast** ：`const_cast<type-id>( expression )` 
-
-+ 修改类型的const或volatile属性。可以使一个不是const类型的数据转换成const类型的
-  + 常量指针被转化成非常量的指针
-  + 常量引用被转换成非常量的引用
-  + const_cast一般用于修改指针。如const char *p形式。
-
-**static_cast** ：`static_cast < type-id > ( expression )`
-
-+ 该运算符把expression转换为type-id类型，但没有运行时类型检查来保证转换的安全性。
-  + void指针->其他类型指针
-  + 改变通常的标准转换
-  + 避免出现可能多种转换的歧义
-
-**dynamic_cast**：`dynamic_cast < type-id > ( expression )`
-
-+ 该运算符把expression转换成type-id类型的对象。Type-id必须是类的指针、类的引用或者void *；如果type-id是类指针类型，那么expression也必须是一个指针，如果type-id是一个引用，那么expression也必须是一个引用
 
 ---
 
@@ -1151,7 +1244,321 @@ cout << base[0] << base[1];
 
 ---
 
+### 重载与类型转换
+
+##### 1.C++的四种强制转换类型
+
+**reinterpret_cast** ：`reinpreter_cast (expression)`
+
++ 
+
+**const_cast** ：`const_cast<type-id>( expression )` 
+
++ 修改类型的const或volatile属性。可以使一个不是const类型的数据转换成const类型的
+  + 常量指针被转化成非常量的指针
+  + 常量引用被转换成非常量的引用
+  + const_cast一般用于修改指针。如const char *p形式。
+
+**static_cast** ：`static_cast < type-id > ( expression )`
+
++ 该运算符把expression转换为type-id类型，但没有运行时类型检查来保证转换的安全性。
+  + void指针->其他类型指针
+  + 改变通常的标准转换
+  + 避免出现可能多种转换的歧义
+
+**dynamic_cast**：`dynamic_cast < type-id > ( expression )`
+
++ 该运算符把expression转换成type-id类型的对象。Type-id必须是类的指针、类的引用或者void *；如果type-id是类指针类型，那么expression也必须是一个指针，如果type-id是一个引用，那么expression也必须是一个引用
+
+---
+
 ### 面向对象程序设计
+
+##### 介绍一下C++中的静态类型与动态类型
+
++ `静态类型`在编译期已知，是变量/表达式声明时的类型
++ `动态类型`到运行期才可知，是变量/表达式在内存中对象的类型
+
+只有基类的引用/指针才可能发生静态类型和动态类型不一致的情况，即编译时绑定和运行时绑定。
+
+---
+
+##### 什么是编译时绑定和运行时绑定？
+
++ 如果基类希望派生类进行overwrite： 定义为虚函数，使用指针/引用调用时，函数的版本由运行时的对象类型决定
++ 如果基类希望派生类直接继承： 在编译期间就已经知道函数的版本，直接定位到类中的方法。
+
+---
+
+##### 哪些情况下，可以把类的引用/指针绑定到一个对象
+
+1. 引用/指针的类型与对象一致
+2. 将基类类型的引用/指针绑定到派生类对象
+3. 对象的类型含有可接收的const转换规则
+
+---
+
+##### 类类型的转换与继承，即基类与继承类之间的转换
+
+- `基类引用/指针可指向派生类`：可以让派生类向基类转换
+  - 派生类都有基类部分，基类引用/指针可绑定到基类部分
+- `派生类引用/指针不可指向基类`：不可以让基类向派生类的转换
+  - 派生类派生的那部分基类并没有。
+- 特别是，即使基类的引用/指针绑定到派生类，也不可将其赋值给该派生类类型的引用/指针
+
+```c
+/* 上下文：Bulk_quote由Quote派生而来 */
+Bulk_quote bulk;
+Quote *itemP=&bulk;         //对，基类指针可指向派生类对象
+Bulk_quote *bulkP=itemp;    //错，基类指针不可转为派生类指针，即使该基类指针实际指向该派生类类型
+```
+
+> 从派生类到基类的类型转换只对引用/指针有效
+
+---
+
+##### 虚函数的使用注意事项
+
++ 由于只有运行时才知道调用了哪个虚函数，故所有虚函数都必须有定义
+
++ 虚函数调用的版本：
+
+  - 通过引用/指针调用虚函数时，进行动态编译，函数的版本由运行时的对象类型决定
+  - 通过非引用非指针表达式调用虚函数时，进行静态编译，在编译期间就知道函数的版本，直接定位到类中的方法。
+
++ 当派生类的虚函数调用它覆盖的基类虚函数时，需要手动指定虚函数版本，回避动态绑定
+
+  ```c++
+  double discounted=baseP->net_price(42);             //指针调用虚函数，在运行时确定版本
+  double undiscounted=baseP->Quote::net_price(42);    //手动指定执行Quote中的版本
+  ```
+
+---
+
+##### 介绍一下抽象基类
+
++ 若一个基类只用于对其派生类提供抽象，不希望产生该基类的实例，则可将该基类定义为`抽象基类(ABC)`
++ 将虚函数定义为`纯虚函数`，即将基类定义为抽象类。
++ 将虚函数定义为纯虚函数的方法是在函数体的位置写`=0`，且只能出现在类内部的虚函数声明语句处
+
+---
+
+##### 类对其继承而来的成员的访问权限受什么影响？
+
+- 基类中该成员的访问说明符
+- 类派生列表中的访问说明符
+
+---
+
+##### 派生类的成员能否访问直接基类的成员与什么有关？
+
++ 派生类的成员/友元能否访问直接基类的成员，只与直接基类成员的访问说明符有关，与派生访问说明符无关
++ 假设D继承自B，则基类部分的访问控制：
+
+  - 若是`public继承`：D的基类部分在D中public，D的所有用户都可访问其基类部分
+  - 若是`protected继承`：D的基类部分在D中protected，D的派生类成员/友元可访问其基类部分（基类部分的public成员在D中变为protected）
+  - 若是`private继承`：D的基类部分在D中private，只有D的成员/友元可访问其基类部分（基类部分的成员在D中都变为private）
+
+---
+
+##### 继承中类的作用域
+
++ 类存在继承关系时，派生类的作用域嵌套在基类作用域中。若一个名字在派生类中无法解析，则去基类中寻找定义。由于继承关系的类作用域嵌套，所以派生类可直接访问基类成员（而不需指定基类作用域）。
++ 声明在内层作用域的函数不会重载外层作用域的函数，故派生类中的函数也不会重载其基类的成员。不同作用域中的函数不是重载关系。但可手动指定作用域来访问
+
+```c++
+struct Base{
+    int memfcn();
+};
+struct Derived: Base{
+    int memfcn(int);    //隐藏基类中的该名字
+};
+Base b;
+Derived d;
+b.memfcn();             //对，调用Base::memfcn
+d.memfcn(10);           //对，调用Derived::memfcn
+d.memfcn();             //错，基类的函数在派生类中被隐藏而非重载
+d.Base::memfcn();       //对，显式调用基类函数Base::memfcn
+```
+
+---
+
+##### 你了解虚函数表和虚表指针吗？
+
++ 类中含有virtual关键字修饰的方法时，编译器会自动生成虚表；是全局共享的元素，即全局仅有一个，在编译时就构造完成。虚函数表类似一个数组，
+
++ 虚表指针：在含有虚函数的类实例化对象时，对象地址的前四个字节存储的指向虚表的指针vptr
+
+---
+
+##### 基类的虚函数表存放在内存的什么区，虚表指针vptr的初始化时间
+
++ C++中虚函数表位于只读数据段（.rodata），也就是C++内存模型中的常量区；
++ 虚函数则位于代码段（.text），也就是C++内存模型中的代码区。
++ 虚表指针`vptr`跟虚函数密不可分，对于有虚函数或者继承于拥有虚函数的基类，对该类进行实例化时，在构造函数执行时会对虚表指针进行初始化，并且存在对象内存布局的最前面。
+
+---
+
+##### final与 override关键字
+
++ override：
+  + 指定子类的这个虚函数是重写的父类的，万一名字不小心打错了的话，编译器是不会编译通过的，更安全也更醒目
++ final：
+  + 当不希望类被继承或虚函数被重写，在类名和虚函数后添加final关键字，添加后被继承或重写，编译器会报错。
+
+---
+
+##### 为什么析构函数一般写成虚函数
+
+原因：在实现多态时，当用基类操作派生类，析构时防止只析构基类而不析构派生类的状况发生
+
++ 如果析构函数不被声明成虚函数，当基类指针指向派生类对象时，，删除该基类的指针则编译器实施静态绑定，只会调用基类的析构函数而不调用派生类析构函数，这样就会造成派生类对象析构不完全，造成内存泄漏。
+
++ 由于类的多态性，设置为虚函数时，调用该指针指向的派生类析构函数，而派生类的析构函数又自动调用基类的析构函数，这样整个派生类的对象完全被释放。
+
+---
+
+##### C++中的重载、重写（覆盖）和隐藏的区别
+
++ 重载 overload
+  + 在同一范围定义中的同名成员函数才存在重载关系。主要特点是函数名相同，参数类型和数目有所不同
++ 重写（覆盖） override
+  + 在派生类中覆盖基类中的同名函数，重写函数体**，**要求基类函数必须是虚函数且参数类型，个数，返回值都相同
+
+> 重写并不在同一个范围内，是垂直关系(父与子)
+
++ 隐藏
+  + 隐藏指的是某些情况下，派生类中的函数屏蔽了基类中的同名函数；想调用基类中的函数必须指明，否则报错
+
+```c++
+class A{
+public:
+    virtual void fun(int a){
+        cout << "A中的fun函数" << endl;
+    }
+};
+class B : public A{
+public:
+   virtual void fun(char* a){//隐藏父类的fun函数
+       cout << "B中的fun函数" << endl;
+   }
+};
+int main(){
+    B b;
+    b.fun(2);    //报错，调用的是B中的fun函数，参数类型不对
+    b.A::fun(2); //调用A中fun函数
+    return 0;
+}
+```
+
+---
+
+##### C++ 中的多态是如何实现的？
+
+多态同一事物表现出不同事物的能力。C++实现多态的两种方式：
+
++ 覆盖/重写 override： 是指子类重新定义父类的虚函数的做法。实现运行时绑定
++ 重载：是指同意范围允许存在多个同名函数，但函数的参数表不同
+
+---
+
+##### C++中如何利用虚函数表和虚函数指针来实现多态的？
+
++ 编译器发现基类中有虚函数时，会自动为每个含有虚函数的类生成一份一维数组的虚表，保存虚函数的入口地址；虚表可以继承，如果子类没有重写虚函数，那么子类虚表中仍然会有该函数的地址，只不过这个地址指向的是基类的虚函数实现。如果基类3个虚函数，那么基类的虚表中就有三项(虚函数地址)，派生类也会有虚表，至少有三项
++ 如果派生类重写了相应的虚函数，那么虚表中的地址就会改变，指向自身的虚函数实现。如果派生类有自己的虚函数，那么虚表中就会添加该项。
++ 编译器会在每个对象的前四个字节中保存一个虚表指针vptr，指向对象所属类的虚表。在构造时，根据对象的类型去初始化虚指针vptr，从而让vptr指向正确的虚表，从而在调用虚函数时，能找到正确的函数
+
+---
+
+##### 能否在构造函数中抛出异常？
+
+1. 构造函数中尽量不要抛出异常，能避免的就避免，如果必须，要考虑不要内存泄露！（智能指针）
+2. 有时在构造函数中抛出异常，可能会导致构造不完全，使得析构函数不能被调用，造成内存泄露或系统资源未被释放。
+
+---
+
+##### 能否在析构函数中抛出异常？
+
+1. 不要在析构函数中抛出异常！会导致程序过早结束或出现不明确的行为。
+
+2. 如果某个操作可能会抛出异常，class应提供一个普通函数（而非析构函数），来执行该操作。目的是给客户一个处理错误的机会。
+
+   + 在下面这个例子中，如果定义了students[10]之后，经过一些操作进行 delete[]，按从后往前的顺序逐个析构，但是析构第一个时抛出异常，剩下的9个就无法继续析构了，造成资源泄露。
+
+   ```c++
+   class student{
+   		~student(){}//抛出异常
+   }
+   class Class {
+     	vector<student> sudents;
+     	...
+   }
+   ```
+
+---
+
+##### 类什么时候会析构
+
+1. 对象生命周期结束，被销毁时;
+2. delete指向对象的指针
+3. 对象i是对象o的成员，o的析构函数被调用时，对象i的析构函数也被调用。
+
+---
+
+##### delete的使用
+
++ 如果不希望类提供拷贝构造/移动构造的功能，则只进行声明，并在后面加上`=delete`
+
+```c++
+class B{
+public:
+    B();
+    B(const B &)=delete;//定义了拷贝构造函数，且定义为删除。因此B没有移动构造函数。因此既不能拷贝又不能移动
+};
+class D: public B{};//基类定义了拷贝构造函数，且定义为删除。则派生类的合成拷贝构造函数也是删除，且没有移动构造函数
+D d;
+D d2(d);            //错，D的合成拷贝构造函数被删除
+D d3(std::move(d)); //错，D没有移动构造函数，而合成拷贝构造函数被删除
+```
+
+##### 派生类拷贝控制成员时的注意事项
+
+- 派生类定义拷贝/移动构造函数时，通常应在`初值列表`中显式调用基类的对应函数来初始化对象的基类部分。否则基类部分被`默认初始化`
+- 派生类的赋值算符也必须显式调用基类的赋值算符，来为基类部分赋值
+- 成员构造的顺序：先执行基类构造函数，再执行派生类构造函数，直到继承链底端
+- 成员析构的顺序：先执行派生类析构函数，再执行基类析构函数，直到继承链顶端
+
+---
+
+##### 构造函数可以继承吗？
+
++ 不能继承默认/拷贝/移动构造函数。若派生类未定义它们，编译器将合成它们
+
++ 派生类继承基类构造函数的方式是提供一条`using声明`语句。这条using语句不是为了使名字可见，而是令编译器产生代码：对于基类的每个构造函数，编译器都生成一个对应的形参列表完全相同的派生类构造函
+
+```c++
+/* 上下文：Bulk_quote继承自Disc_quote */
+class Bulk_quote:public Disc_quote{
+public:
+    using Disc_quote::Disc_quote;   //使用using声明继承基类的构造函数
+    double net_price(size_t) const;
+};
+```
+
+##### 构造函数能否声名称虚函数
+
++ 构造函数不能定义为虚函数。在构造函数中可以调用虚函数，不过此时调用的是正在构造的类中的虚 函数，而不是子类的虚函数，因为此时子类尚未构造好。
++ 虚函数对应一个vtable(虚函数表)，类中存储一个vptr指向这个vtable。如果构造函数是虚函数，就需 要通过vtable调用，可是对象没有初始化就没有vptr，无法找到vtable，所以构造函数不能是虚函数。
+
+##### 构造函数、析构函数、虚函数可否声明为内联函数
+
++ 将这些函数声明为内联函数，在语法上没有错误。因为inline只是个建议，编译器并不一定真正的内联。
++ 构造函数和析构函数声明为内联函数是没有意义的，因为编译器会在构造和析构函数中进行申请/释放内存，构造/析构对象等，并不像看上去的那么精简。
++ 当虚函数体不复杂时：
+  + 派生类的指针调用声明为inline的虚函数时，不会内联展开；
+  + 对象本身调用虚函数时，会内联展开
+
+---
 
 ### 模板类
 
